# TranscriptionSuite

./: .doc-freshness.yaml  .gitignore
dashboard/: App.tsx  package-lock.json
dashboard/components/views/: ModelManagerTab.tsx  ServerView.tsx  SessionView.tsx  SettingsModal.tsx
dashboard/electron/: dockerManager.ts  preload.ts
dashboard/src/api/: types.ts
dashboard/src/services/: modelCapabilities.ts  modelRegistry.ts
docs/: README.md  README_DEV.md  apple-silicon-metal.md  omi_external_custom_STT_service_docs.md
samples/output/: 13-31-31-10min.converted_20260324_123848.json  1min_test_20260324_124237.json
scripts/: test_omi_websocket.py  test_ws_stt.py
server/: config.yaml
server/backend/: config.py  pyproject.toml
server/backend/api/: main.py
server/backend/api/routes/: admin.py  notebook.py  omi.py  transcription.py  ws_stt.py
server/backend/core/: diarization_engine.py  model_manager.py  token_store.py
server/backend/core/stt/backends/: factory.py  mlx_whisper_backend.py  parakeet_backend.py
server/backend/tests/: test_ws_stt.py
server/docker/: docker-compose.dev-src.yml  entrypoint.py
